[package]
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
description = "STUFF"
edition = "2021"
license = "GPL-3.0-only"
name = "tap_tempo"
repository = "https://github.com/JosephTLyons/tap_tempo"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"